Fix line-wrapping on gists

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -595,7 +595,7 @@ table.plain {
 }
 
 .gist .line-number {
-    min-width: 10px;
+    min-width: 25px;
     font-size: 1.1rem;
 }
 
